added routes for react component pages

--- a/templateLogReg/index.html
+++ b/templateLogReg/index.html
@@ -81,6 +81,18 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<!--//signin-form-->
 	</div>
 
+	<!-- <script type="text/javascript">
+
+		$(".btn").on("click", function () {
+
+
+
+			});
+	
+
+
+	
+	</script> -->
 
 </body>
 
