--- a/templateLogReg/login.html
+++ b/templateLogReg/login.html
@@ -34,7 +34,7 @@
                     <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
             </div>
            
-            <a href="/index"><button type="submit" class="btn btn-primary">Login</button></a>
+            <a href="localhost/3000/login"><button type="submit" class="btn btn-primary">Login</button></a>
             <a href="/index"><button type="signup" class="btn btn-primary">Sign Up</button></a>
         </form>
     </div>
