--- a/templateLogReg/index.html
+++ b/templateLogReg/index.html
@@ -50,7 +50,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<input type="password" name="logpassword" placeholder="Password" required="">
 							<div class="tp">
 									<br>
-								<button class="btn btn-primary" type="submit" value="LOGIN NOW">LOGIN NOW</button>
+								<a href="/bills"><button class="btn btn-primary" type="submit" value="LOGIN NOW">LOGIN NOW</button></a>
 							</div>
 						</form>
 					</div>
