--- a/templateLogReg/index.html
+++ b/templateLogReg/index.html
@@ -46,11 +46,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<h3>Login</h3>
 					<div class="login-form">
 						<form action="/" method="post">
-							<input type="text" class="" name="logemail" placeholder="E-mail" required="">
-							<input type="password" name="logpassword" placeholder="Password" required="">
+							
+								login E-mail
+								login password
+
 							<div class="tp">
 									<br>
-								<button class="btn btn-primary" type="submit" value="LOGIN NOW">LOGIN NOW</button>
+
+									btn
+								
 							</div>
 						</form>
 					</div>
@@ -65,13 +69,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 					<div class="login-form">
 						<form action="/" method="post">
-							<input type="text" name="email" placeholder="E-mail" required="">
-							<input type="text" name="username" placeholder="Username" required="">
-							<input type="password" name="password" placeholder="Password" required="">
-							<input type="password" name="passwordConf" placeholder="Confirm Password" required="">
+							reg email
+							reg username
+							register password
+							confirm password
 							<br>
 							<br>
-							<button class="btn btn-primary" type="submit" value="REGISTER">REGISTER</button>
+
+								register btn
 						</form>
 					</div>	
 				</div>
